[package]
name = "i-love-norton-commander"
version = "0.1.0"
description = "A Norton Commander-style dual-pane file manager"
authors = ["you"]
edition = "2021"

[lib]
name = "i_love_norton_commander_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

